tests/baselines/reference/collisionSuperAndNameResolution.errors.txt
tests/cases/compiler/collisionSuperAndNameResolution.ts(9,21): error TS2402: Expression resolves to '_super' that compiler uses to capture base class reference.


==== tests/cases/compiler/collisionSuperAndNameResolution.ts (1 errors) ====
    var console: {
        log(message: any);
    }
    var _super = 10; // No error
    class base {
    }
    class Foo extends base {
        x() {
            console.log(_super); // Error as this doesnt not resolve to user defined _super
                        ~~~~~~
!!! error TS2402: Expression resolves to '_super' that compiler uses to capture base class reference.
        }
    }